--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "ExpressionLibrary"]
 	path = ExpressionLibrary
 	url = git@github.com:Chewnonobelix/ExpressionLibrary.git
+[submodule "vlc"]
+	path = vlc
+	url = git@github.com:videolan/vlc.git
+[submodule "vlc-qt"]
+	path = vlc-qt
+	url = git@github.com:vlc-qt/vlc-qt.git
